Bug 240414 - Folder peek popups occlude the "Open with" dialog due to their window focus settings
Summary: Folder peek popups occlude the "Open with" dialog due to their window focus s...
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-folderview (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Ignat Semenov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-02 02:19 UTC by bld.temp
Modified: 2012-03-06 16:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.2
Sentry Crash Report:


Attachments
a picture speaks 2^10 words (446.63 KB, image/png)
2010-06-02 02:19 UTC, bld.temp
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bld.temp 2010-06-02 02:19:17 UTC
Created attachment 47582 [details]
a picture speaks 2^10 words

Version:           0.0.1 (using KDE 4.4.3) 
OS:                Linux

I have my home dir displayed in a desktop activity window (terminology?).

Calling the open with function from the context menu on files in child dirs of my home dir brings up the dialog behind all the child dir pop up windows.  The child dir windows will not automatically disappear until the open with dialog is dismissed, making the open with dialog all or mostly inaccessible.

Reproducible: Always

Steps to Reproduce:
Attached screen shot lays it all out.



OS: Linux (i686) release 2.6.32-22-generic
Compiler: cc
Comment 1 Beat Wolf 2010-06-03 13:43:21 UTC
i can confirm this
Comment 2 Thijs 2011-12-14 11:22:10 UTC
Confirmed in 4.7.3. I guess it has to do with the plasma window having an always on top tag, and the called open with... dialog does not. To me it would make most sense to simply pass the depth coordinate along to the dialog, if possible.
Comment 3 Ignat Semenov 2012-03-06 16:01:23 UTC
bugzilla seems to be broken wrt git commit hooks, closing by hand

fixed with commits 2f7a0715, 6b8ecf79 and 22513e5d6.