close the folder peek popups on triggering the "Open With" action

Close all open popups on "Open With" selected to maintain consistency with activating an item in the folder peek popup and in order not to occlude the dialog with the popup
1)Expose the KFileItemActions object in KonqPopupMenu
2)Add a method hideThisAndParentPopup() to hide the open popups without deletion;actually delete the popups only after executing the context menu in order to avoid a crash in contextMenuRequest() after deleting the popups

BUG:240414
FIXED-IN:4.8.2

reviewed by fredrikh